--- a/frontend/introduction.html
+++ b/frontend/introduction.html
@@ -9,7 +9,6 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gray-900 text-white font-poppins flex items-center justify-center min-h-screen relative overflow-hidden">
-    <!-- Background Elements -->
     <div class="bg-orbs">
         <div class="orb orb-1"></div>
         <div class="orb orb-2"></div>
@@ -31,15 +30,14 @@
             <p class="text-lg text-gray-300 mb-8">
                 Your intelligent assistant for unlocking insights from your PDF documents. Get instant answers, summaries, and data extraction powered by cutting-edge AI.
             </p>
-            <a href="index.html" class="btn btn-primary text-xl px-8 py-4 rounded-full shadow-lg hover:shadow-2xl transition-all duration-300 transform hover:scale-105">
-                Get Started
+            <a href="http://localhost:8000/auth/google/login" class="btn btn-primary text-xl px-8 py-4 rounded-full shadow-lg hover:shadow-2xl transition-all duration-300 transform hover:scale-105">
+                Get Started with Google
                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" class="ml-2">
                     <path d="m5 12 7-7 7 7"/>
                     <path d="M12 19V5"/>
                 </svg>
             </a>
         </div>
-        
     </div>
 </body>
 </html>
