--- a/frontend/app.html
+++ b/frontend/app.html
@@ -96,13 +96,13 @@
                         </svg>
                     </div>
                     <div class="card-title-group">
-                        <h2 class="card-title">Upload Your PDF</h2>
-                        <p class="card-subtitle">Drop your document here or click to browse</p>
+                        <h2 class="card-title">Upload Your PDFs</h2>
+                        <p class="card-subtitle">Drop your documents here or click to browse multiple files</p>
                     </div>
                 </div>
                 <div class="card-content">
                     <div class="upload-zone" id="uploadZone">
-                        <input id="fileInput" type="file" accept="application/pdf" class="file-input" hidden />
+                        <input id="fileInput" type="file" accept="application/pdf" class="file-input" multiple hidden />
                         <div class="initial-state" style="display: flex;">
                             <div class="upload-icon-large">
                                 <svg width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5">
@@ -113,14 +113,16 @@
                                 </svg>
                             </div>
                             <div class="upload-text">
-                                <p class="upload-primary">Drag & drop your PDF here</p>
-                                <p class="upload-secondary">or <span class="browse-link" id="browseBtn">click to select file</span> (Max 10MB)</p>
+                                <p class="upload-primary">Drag & drop your PDFs here</p>
+                                <p class="upload-secondary">or <span class="browse-link" id="browseBtn">click to select files</span> (Max 10 files, 50MB each)</p>
                             </div>
                         </div>
-                        <div class="selected-file-display" id="fileDisplayNameInsideBox" style="display: none;">
-                            <span class="file-icon">📄</span>
-                            <span class="file-name-text"></span>
-                            <button class="clear-file-button" id="clearFileButton"><i class="fas fa-times"></i></button>
+                        <div class="selected-files-display" id="selectedFilesDisplay" style="display: none;">
+                            <div class="files-header">
+                                <span class="files-count" id="filesCount">0 files selected</span>
+                                <button class="clear-all-button" id="clearAllButton">Clear All</button>
+                            </div>
+                            <div class="files-list" id="filesList"></div>
                         </div>
                     </div>
                     <button id="uploadButton" class="btn btn-primary">
@@ -129,7 +131,7 @@
                             <polyline points="17 8 12 3 7 8"/>
                             <line x1="12" x2="12" y1="3" y2="15"/>
                         </svg>
-                        <span>Upload Document</span>
+                        <span>Upload Documents</span>
                     </button>
                     <div id="uploadStatus" class="status-message"></div>
                 </div>
@@ -145,12 +147,12 @@
                     </div>
                     <div class="card-title-group">
                         <h2 class="card-title">Ask Anything</h2>
-                        <p class="card-subtitle">What would you like to know about your document?</p>
+                        <p class="card-subtitle">What would you like to know about your documents?</p>
                     </div>
                 </div>
                 <div class="card-content">
                     <div class="query-input-group">
-                        <input id="questionInput" type="text" placeholder="Ask me anything about your PDF document..." class="query-input" />
+                        <input id="questionInput" type="text" placeholder="Ask me anything about your PDF documents..." class="query-input" />
                         <div class="input-suggestions">
                             <button class="suggestion-btn" onclick="document.getElementById('questionInput').value='Summarize the main points'">Summarize</button>
                             <button class="suggestion-btn" onclick="document.getElementById('questionInput').value='What are the key findings?'">Key findings</button>
@@ -167,6 +169,44 @@
                 </div>
             </div>
 
+            <div class="app-card documents-card">
+                <div class="card-header">
+                    <div class="card-icon documents-icon">
+                        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V7z"/>
+                            <polyline points="14,2 14,8 20,8"/>
+                        </svg>
+                    </div>
+                    <div class="card-title-group">
+                        <h2 class="card-title">Your Documents</h2>
+                        <p class="card-subtitle">Manage your uploaded PDFs</p>
+                    </div>
+                </div>
+                <div class="card-content">
+                    <div class="documents-actions">
+                        <button id="refreshDocumentsButton" class="btn btn-secondary">
+                            <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                <polyline points="23 4 23 10 17 10"/>
+                                <polyline points="1 20 1 14 7 14"/>
+                                <path d="M20.49 9A9 9 0 0 0 5.64 5.64L1 10m22 4l-4.64 4.36A9 9 0 0 1 3.51 15"/>
+                            </svg>
+                            <span>Refresh</span>
+                        </button>
+                        <button id="deleteAllDocumentsButton" class="btn btn-danger">
+                            <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                <polyline points="3,6 5,6 21,6"/>
+                                <path d="M19,6v14a2,2 0 0,1 -2,2H7a2,2 0 0,1 -2,-2V6m3,0V4a2,2 0 0,1 2,-2h4a2,2 0 0,1 2,2v2"/>
+                            </svg>
+                            <span>Delete All</span>
+                        </button>
+                    </div>
+                    <div id="documentsList" class="documents-list">
+                        <div class="loading-message">Click "Refresh" to load your documents</div>
+                    </div>
+                    <div id="documentsStatus" class="status-message"></div>
+                </div>
+            </div>
+
             <div class="app-card results-card" id="answerCard">
                 <div class="card-header">
                     <div class="card-icon results-icon">
@@ -178,7 +218,7 @@
                     </div>
                     <div class="card-title-group">
                         <h2 class="card-title">AI Response</h2>
-                        <p class="card-subtitle">Here's what I found in your document</p>
+                        <p class="card-subtitle">Here's what I found in your documents</p>
                     </div>
                 </div>
                 <div class="card-content">
@@ -222,3 +262,4 @@
     <script src="app.js"></script>
 </body>
 </html>
+
