--- a/frontend/index.html
+++ b/frontend/index.html
@@ -30,7 +30,7 @@
             <p class="text-lg text-gray-300 mb-8">
                 Your intelligent assistant for unlocking insights from your PDF documents. Get instant answers, summaries, and data extraction powered by cutting-edge AI.
             </p>
-            <a href="https://docquery.fly.dev/auth/google/login" class="btn btn-primary text-xl px-8 py-4 rounded-full shadow-lg hover:shadow-2xl transition-all duration-300 transform hover:scale-105">
+            <a href="https://docquerytest.fly.dev/auth/google/login" class="btn btn-primary text-xl px-8 py-4 rounded-full shadow-lg hover:shadow-2xl transition-all duration-300 transform hover:scale-105">
                 Get Started with Google
                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" class="ml-2">
                     <path d="m5 12 7-7 7 7"/>
