fix :generate pdf for response

--- a/frontend/app.html
+++ b/frontend/app.html
@@ -306,6 +306,8 @@
         </div>
     </footer>
 
+    <!-- Add jsPDF library -->    
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
     <script src="app.js?v=2"></script>
 </body>
 </html>
