feat: Add Text-to-Speech

--- a/frontend/app.html
+++ b/frontend/app.html
@@ -272,6 +272,30 @@
                             <span>Download as PDF</span>
                         </button>
                     </div>
+                    <div id="speakButtons" class="action-buttons" style="display: none;">
+                        <button onclick="speakOriginalText()" class="btn btn-secondary">
+                            <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                <path d="M11 5L6 9H2v6h4l5 4V5z"/>
+                                <path d="M15.54 8.46a5 5 0 0 1 0 7.07"/>
+                                <path d="M19.07 4.93a10 10 0 0 1 0 14.14"/>
+                            </svg>
+                            <span>Speak Original</span>
+                        </button>
+                        <button onclick="speakTranslatedText()" class="btn btn-secondary">
+                            <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                <path d="M11 5L6 9H2v6h4l5 4V5z"/>
+                                <path d="M15.54 8.46a5 5 0 0 1 0 7.07"/>
+                                <path d="M19.07 4.93a10 10 0 0 1 0 14.14"/>
+                            </svg>
+                            <span>Speak Current</span>
+                        </button>
+                        <button onclick="stopSpeaking()" class="btn btn-secondary">
+                            <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                <rect x="6" y="6" width="12" height="12" rx="2" ry="2"/>
+                            </svg>
+                            <span>Stop</span>
+                        </button>
+                    </div>
                     <div class="disclaimer">
                         <div class="disclaimer-icon">
                             <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
