fix: backend URL config and Qdrant timeout parameter

--- a/frontend/app.html
+++ b/frontend/app.html
@@ -332,6 +332,7 @@
 
     <!-- Add jsPDF library -->    
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+    <script src="config.js"></script>
     <script src="app.js?v=2"></script>
 </body>
 </html>
