fix:backend configs

--- a/frontend/app.html
+++ b/frontend/app.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="style.css?v=3">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&family=Space+Grotesk:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <meta name="BACKEND_URL" content="https://docquery.fly.dev">
 </head>
 <body>
     <div class="bg-orbs">
@@ -332,7 +333,6 @@
 
     <!-- Add jsPDF library -->    
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
-    <script src="config.js"></script>
     <script src="app.js?v=2"></script>
 </body>
 </html>
